# brycenall-site

./: .gitignore  COPYING  README.md  manage.py  pyproject.toml  requirements.txt
brycenall/: asgi.py  aws.py  db.sqlite3  forms.py  urls.py  views.py  wsgi.py
brycenall/settings/: dev.py  prod.py  test.py
brycenall/static/brycenall/css/: input.css
brycenall/templates/brycenall/: background.html  contact.html  filmrect.html  filmstrip.html  footer.html  landing.html  layout.html  logged_out.html  login.html
brycenall/templates/brycenall/partials/: _contact.html  _landing.html
brycenall/templates/portfolio/: contact.html  gallery.html  layout.html  login.html  search.html  search_results.html  upload.html
brycenall/templates/portfolio/media/: create.html  (+6 more)
brycenall/templatetags/: brycenall_filmstrip.py
portfolio/: admin.py  forms.py  models.py  renderer.py  urls.py  validators.py  views.py
portfolio/fixtures/portfolio/: categories-videographer.json  media-cartoon-videos.json  media-nasa-images.json
portfolio/forms/: __init__.py  forms.py  renderer.py  widgets.py
portfolio/templates/portfolio/: gallery.html  layout.html  media_delete.html  media_detail.html  media_display.html  media_edit.html  media_list.html  media_search.html  media_upload.html  newsletter_signup.html  publishedmedia_detail.html  search.html  search_results.html  upload.html
portfolio/templatetags/: portfolio_backgrounds.py  portfolio_display.py  portfolio_utils.py  portfolio_widgets.py
portfolio/views/: __init__.py  media.py  portfolio.py
theme/static_src/: tailwind.config.js
(+60 files in other folders)
