[project]
version = "1.0.0"
name = "brycenall-site"
description = "Bryce Nall's website."
requires-python = ">= 3.12"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { name = "Blake Nall", email = "dev@darthnall.com" },
    { name = "Constantine Kapatos", email = "kapatos.constantine@gmail.com" },
]
dependencies = [
    "boto3>=1.35.81",
    "crimsonslate-portfolio==1.6.2",
    "django>=5.1.4",
    "django-tailwind[reload]>=3.8.0",
    "docutils>=0.21.2",
]

[project.urls]
Homepage = "https://brycenall.com"
Repository = "https://github.com/crimsonslate/brycenall-site"

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "node_modules",
    "site-packages",
    "dist",
    "build",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "DJ",
]
ignore = ["DJ001", "F821"]
fixable = [ "ALL" ]
unfixable = []
extend-per-file-ignores = {"*/migrations/*.py" = ["E501"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
